# mjml-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  VERSION.txt  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml  typecheck.yml
mjml/: __init__.py  __init__.pyi  _types.py  mjml2html.py  testing_helpers.py
mjml/core/: __init__.py  api.py  components.py  registry.py
mjml/elements/: __init__.py  _accordion_helpers.py  _base.py  mj_accordion.py  mj_accordion_element.py  mj_accordion_text.py  mj_accordion_title.py  mj_body.py  mj_button.py  mj_carousel.py  mj_carousel_image.py  mj_column.py  mj_divider.py  mj_group.py  mj_hero.py  mj_image.py  mj_navbar.py  mj_navbar_link.py  mj_raw.py  mj_section.py  mj_social.py  mj_social_element.py  mj_spacer.py  mj_table.py  mj_text.py  mj_wrapper.py
mjml/helpers/: __init__.py  conditional_tag.py  fonts.py  json_to_xml.py  make_lower_breakpoint.py  media_queries.py  mergeOutlookConditionals.py  preview.py  py_utils.py  shorthand_parser.py  skeleton.py  suffixCssClasses.py  width_parser.py
mjml/lib/: __init__.py  attribute_dict.py  dict_merger.py
mjml/scripts/: mjml  mjml-html-compare  mjml.py
tests/: accordion_font_test.py  border_parser_test.py  custom_components_test.py  includes_with_umlauts_test.py  missing_functionality_test.py  mj_button_mailto_link_test.py  mjml2html_test.py  strip_unit_test.py  upstream_alignment_test.py  width_parser_test.py
tests/button/: button-expected.html  button_test.py
tests/custom/: __init__.py  mj_text_custom.py  mj_text_override.py
tests/hello_world/: hello-world-expected.html  hello-world.mjml  hello_world_test.py
tests/minimal/: minimal.mjml  minimal_test.py
tests/missing_functionality/: html-entities-expected.html  html-entities.mjml  html-without-closing-tag-expected.html  missing-whitespace-before-tag-expected.html
tests/testdata/: _custom-expected.html  _footer.mjml  button-expected.html  button.mjml  css-inlining-expected.html  css-inlining.mjml  custom-component-expected.html  custom-component.mjml  entities-expected.html  entities.mjml  header.mjml  hello-world-expected.html  hello-world.mjml  hello-world.mjml.json  html-entities-expected.html  html-without-closing-tag-expected.html  html-without-closing-tag.mjml  minimal-expected.html  missing-whitespace-before-tag-expected.html  missing-whitespace-before-tag.mjml  mj-accordion-expected.html  mj-accordion.mjml  mj-attributes-expected.html  mj-attributes-for-mj-body-expected.html  mj-attributes-for-mj-body.mjml  mj-attributes.mjml  mj-body-with-background-color-expected.html  mj-body-with-background-color.mjml  mj-breakpoint-expected.html  mj-breakpoint.mjml  mj-button-with-width-expected.html  mj-button-with-width.mjml  mj-carousel-expected.html  mj-column-with-attributes-expected.html  mj-column-with-attributes.mjml  mj-column-with-fractional-width-expected.html  mj-column-with-fractional-width.mjml  mj-font-expected.html  mj-font-multiple-expected.html  mj-font-multiple.mjml  (+63 more)
tests/text_with_html/: text_with_html.mjml  (+1 more)
tools/: create-expected-html-for-custom-component.js  mj-text-custom.js  update-expected-html.py
(+11 files in other folders)
