[metadata]
name          = mjml
version       = file: VERSION.txt
description   = Python implementation for MJML - a framework that makes responsive-email easy

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/mjml-stub
license       = MIT
license_file  = LICENSE.txt

classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Communications :: Email
	Topic :: Text Processing :: Markup :: HTML
project_urls =
	Code = https://github.com/FelixSchwarz/mjml-stub
	Issue tracker = https://github.com/FelixSchwarz/mjml-stub/issues


[options]
python_requires = >= 3.6

packages = find:
zip_safe = true
include_package_data = true

install_requires =
	docopt
	jinja2
	lxml

scripts =
	mjml/scripts/mjml-html-compare


[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
	ddt
	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
	PythonicTestcase


[options.entry_points]
console_scripts =
    mjml  = mjml.scripts.mjml:main

