[metadata]
name          = mjml
version       = file: VERSION.txt
description   = Python implementation for MJML - a framework that makes responsive-email easy

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/mjml-python
license       = MIT
# requires setuptools >= 42.0.0
license_files = LICENSE.txt

classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Communications :: Email
	Topic :: Text Processing :: Markup :: HTML
project_urls =
	Code = https://github.com/FelixSchwarz/mjml-python
	Issue tracker = https://github.com/FelixSchwarz/mjml-python/issues


[options]
python_requires = >= 3.6

packages = find:
zip_safe = true
include_package_data = true

install_requires =
    beautifulsoup4
    dotmap
    docopt
    jinja2

scripts =
	mjml/scripts/mjml-html-compare


[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
	FakeFSHelpers
	HTMLCompare >= 0.3.0        # >= 0.3.0: ability to ignore attribute ordering in HTML
	lxml
        pytest
css_inlining =
	css_inline >= 0.11, < 0.12        # >= 0.11, < 0.12: CSSInliner(inline_style_tags=..., keep_link_tags=..., keep_style_tags=...)


[options.entry_points]
console_scripts =
    mjml  = mjml.scripts.mjml:main
